k8s/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: front
  template:
    metadata:
      labels:
        component: front
    spec:
      containers:
        - name: front
          image: shreyanshgohil2510/front
          ports:
            - containerPort: 3000
