k8s/back-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: back
  ports:
    - port: 5000
      targetPort: 5000
